--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,6 +3,7 @@ header {
     background-color: #fff;
     form.btm-search {
         margin-top: 11px; 
+        position: relative;
      }
 }
 #sticky {
@@ -30,14 +31,9 @@ header {
 
 
 .sticky {
-    position: fixed !important;
+    position: sticky !important;
     top:0;
     width: 100%;
-}
-@media screen {
-    .sticky {
-        width: calc(100% - 17px) !important;
-    }
 }
 .top-row {
     &:nth-child(1n) {
@@ -122,7 +118,7 @@ header {
     box-shadow: inset 0 0.875px rgba(0,0,0,.1);
     height: 47px;
     position: absolute;
-    right: 15px;
+    right: 0px;
     .fa-solid {
         font-size: 1.29rem;
         line-height: 2rem;
